update admin functions

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="application/javascript">
+      var global = window;
+    </script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
